Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -241,33 +241,19 @@ For the purpose of future stabilization of the feature, we are applying changes 
 
 Done by @dureuill in #4801, #4815, #4818, #4822.
 
-### ⚠️ Breaking changes - changing the parameters of the REST API
+### ⚠️ Breaking changes: Changing the parameters of the REST API
 
 The old parameters of the REST API are too numerous and confusing.
 
 Removed parameters: `query` , `inputField`, `inputType`, `pathToEmbeddings` and `embeddingObject`.
-Replaced by
+Replaced by:
 - `request` : A JSON value that represents the request made by Meilisearch to the remote embedder. The text to embed must be replaced by the placeholder value `“{{text}}”`.
 - `response`: A JSON value that represents a fragment of the response made by the remote embedder to Meilisearch. The embedding must be replaced by the placeholder value `"{{embedding}}"`.
 
 Before:
 
 ```json5
-// v1.9 (old) version
-{
-  "source": "rest",
-  "url": "https://localhost:10006",
-  "query": {
-    "model": "minillm",
- },
-  "inputField": ["prompt"],
-  "inputType": "text",
-  "embeddingObject": ["embedding"]
-}
-```
-
-```json5
-// v1.10 (new) version
+// v1.10 version ✅ 
 {
   "source": "rest",
   "url": "https://localhost:10006",
@@ -280,25 +266,33 @@ Before:
  }
 }
 ```
+
+```json5
+// v1.9 version ❌
+{
+  "source": "rest",
+  "url": "https://localhost:10006",
+  "query": {
+    "model": "minillm",
+ },
+  "inputField": ["prompt"],
+  "inputType": "text",
+  "embeddingObject": ["embedding"]
+}
+```
+
 > [!CAUTION]
 > This is a breaking change to the configuration of REST embedders.
 > Importing a dump containing a REST embedder configuration will fail in v1.10 with an error: "Error: unknown field `query`, expected one of `source`, `model`, `revision`, `apiKey`, `dimensions`, `documentTemplate`, `url`, `request`, `response`, `distribution` at line 1 column 752".
 
-Upgrade procedure (Cloud):
+Upgrade procedure:
 
-1. Remove any embedder with source "rest"
-2. Follow the usual steps described [here in the documentation](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-meilisearch-cloud)
-
-Upgrade procedure (Open-source users):
-
-1. Remove any embedder with source "rest"
-2. Follow the usual steps described [here in the documentation](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-a-self-hosted-meilisearch-instance)
+1. Remove embedders with source `"rest"`
+2. Update your [Meilisearch Cloud project](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-meilisearch-cloud) or [self-hosted Meilisearch instance](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-a-self-hosted-meilisearch-instance) as usual
 
 ### Add custom headers to REST embedders
 
-When the `source` of an embedder is set to `rest`, `headers` is now available as an optional parameter.
-
-Previously, the parameter did not exist. Trying to use the `headers` parameter for any other `source` is an `invalid_settings_embedder` error.
+When the `source` of an embedder is set to `rest`, you may include an optional `headers` parameter. Use this to configure custom headers you want Meilisearch to include in the requests it sends the embedder.
 
 Embedding requests sent from Meilisearch to a remote REST embedder always contain two headers:
 
@@ -310,6 +304,8 @@ When provided, `headers` should be a JSON object whose keys represent the name o
 If `headers` is missing or `null` for a `rest` embedder, only `Authorization` and `Content-Type` are sent, as described above.
 
 If `headers` contains `Authorization` and `Content-Type`, the declared values will override the ones that are sent by default.
+
+Using the `headers` parameter for any other `source` besides `rest` results in an `invalid_settings_embedder` error.
 
 ### Other quality-of-life improvements
 
