Update changelogs following rc2

--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -341,6 +341,7 @@ Done by @curquiza in #4783.
 * Fix invalid primary key for big numbers @JWSong in #4725
 * Fix wrong HTTP status and confusing error message on wrong payload by @Karribalu in #4716
 * Fix the missing geo distance when one or both of the lat/lng are string by @irevoire in #4731
+* Fix errors related to `OffsetDateTime`: use a fixed date format regardless of features by @dureuill in #4850
 
 # Misc
 
@@ -357,6 +358,7 @@ Done by @curquiza in #4783.
   * Add `vX` Docker tag when publishing Docker image by @curquiza in #4761
   * Add search benchmarks by @dureuill in #4762
   * Add tests on the rest embedder by @irevoire and @dureuill in #4755
+  * Add OpenAI tests by @dureuill in #4846
 * Documentation
   * Add june 11th webinar banner by @Strift in #4691
   * Revert "Add june 11th webinar banner" by @curquiza in #4705
