--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -218,7 +218,7 @@ curl \
   }'
 ```
 
-By indexing this [movies dataset](https://www.meilisearch.com/movies.json), you can run the following Rhai function on all of them. This function will uppercase the titles of the movies with an `id` > 3000 and add sparkles around it. Rhai templating syntax is applied here:
+Then query the `/documents/edit` route with the editing function:
 
 ```bash
 curl http://localhost:7700/indexes/movies/documents/edit \
