Add language settings changes

--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -153,13 +153,13 @@ Done by @irevoire in #4804.
 
 ## Language settings
 
-You can now set up the language of your index in your settings and during the search. This will prevent users from using alternative Meilisearch images we were separately created until now (like for [Swedish](https://github.com/meilisearch/meilisearch/pull/4604) and [Japanese](https://github.com/meilisearch/meilisearch/pull/3882))
+Use the new `localizedAttributes` index setting and the `locales` search parameter to explicitly set the languages used in document fields and the search query itself. This is particularly useful for <=v1.9 users who have to occasionally resort to alternative Meilisearch images due to language auto-detect issues in [Swedish](https://github.com/meilisearch/meilisearch/pull/4604) and [Japanese](https://github.com/meilisearch/meilisearch/pull/3882) datasets.
 
 Done by @ManyTheFish in #4819.
 
-### Index settings
+### Set language during indexing with `localizedAttributes`
 
-Use the newly introduced `localizedAttributes` setting (here is an example of handling multi-language documents):
+Use the newly introduced `localizedAttributes` setting to explicitly declare which languages correspond to which document fields:
 
 ```bash
 curl \
@@ -176,20 +176,17 @@ curl \
   }'
 ```
 
-`locales` is a list of language codes to assign to a pattern, the supported codes are: `epo`, `eng`, `rus`, `cmn`, `spa`, `por`, `ita`, `ben`, `fra`, `deu`, `ukr`, `kat`, `ara`, `hin`, `jpn`, `heb`, `yid`, `pol`, `amh`, `jav`, `kor`, `nob`, `dan`, `swe`, `fin`, `tur`, `nld`, `hun`, `ces`, `ell`, `bul`, `bel`, `mar`, `kan`, `ron`, `slv`, `hrv`, `srp`, `mkd`, `lit`, `lav`, `est`, `tam`, `vie`, `urd`, `tha`, `guj`, `uzb`, `pan`, `aze`, `ind`, `tel`, `pes`, `mal`, `ori`, `mya`, `nep`, `sin`, `khm`, `tuk`, `aka`, `zul`, `sna`, `afr`, `lat`, `slk`, `cat`, `tgl`, `hye`.
+`locales` is a list of ISO 631-2/B language codes to assign to a pattern. The currently supported languages are: `epo`, `eng`, `rus`, `cmn`, `spa`, `por`, `ita`, `ben`, `fra`, `deu`, `ukr`, `kat`, `ara`, `hin`, `jpn`, `heb`, `yid`, `pol`, `amh`, `jav`, `kor`, `nob`, `dan`, `swe`, `fin`, `tur`, `nld`, `hun`, `ces`, `ell`, `bul`, `bel`, `mar`, `kan`, `ron`, `slv`, `hrv`, `srp`, `mkd`, `lit`, `lav`, `est`, `tam`, `vie`, `urd`, `tha`, `guj`, `uzb`, `pan`, `aze`, `ind`, `tel`, `pes`, `mal`, `ori`, `mya`, `nep`, `sin`, `khm`, `tuk`, `aka`, `zul`, `sna`, `afr`, `lat`, `slk`, `cat`, `tgl`, `hye`.
 
 `attributePattern` is a pattern that can start or end with a `*` to match one or several attributes.
 
-`"locales": [], "attributePatterns": ["*"]` means the is the default rule.
+If an attribute matches several rules, only the first rule in the list will be applied. If the locales list is empty, then Meilisearch is allowed to auto-detect any language in the matching attributes.
 
-Notes:
-- if an attribute matches several rules, only the first rule in the list will be applied
-- if the locales list is empty, then Meilisearch is allowed to auto-detect any language in the matching attributes
-- These rules are applied to the `searchableAttributes`, the `filterableAttributes`, and the `sortableAttributes`.
+These rules are applied to the `searchableAttributes`, the `filterableAttributes`, and the `sortableAttributes`.
 
-### At search time
+### Set language at search time with `locales`
 
-The search route accepts a new parameter, `locales` allowing the end-user to define the language used in the current query:
+The `/search` route accepts a new parameter, `locales`. Use it to define the language used in the current query:
 
 ```bash
 curl \
