--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -111,11 +111,7 @@ curl \
 - if `weight` > `1.0`, results from this index are __more__ likely to appear in the results
 - if not specified, `weight` defaults to `1.0`
 
-<!-- The following lines should NOT be put in the PRE-release changelogs -->
-📖 Consult the [official Meilisearch documentation](TBD) for more information about the merge algorithm.
-
-<!-- The following line should ONLY be put PRE-release changelogs -->
-📖 Consult the [in-progress usage page](https://meilisearch.notion.site/v1-10-federated-search-698dfe36ab6b4668b044f735fb40f0b2) for more information about the merge algorithm.
+📖 Consult the [usage page](https://meilisearch.notion.site/v1-10-federated-search-698dfe36ab6b4668b044f735fb40f0b2) for more information about the merge algorithm.
 
 Done by @dureuill in #4769.
 
