--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -19,7 +19,7 @@ curl \
   --data-binary '{
     "federation": {
       "offset": 5,
-      "limit": 10,
+      "limit": 10
     }
     "queries": [
       {
