Add rc3 changes

--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -333,6 +333,7 @@ Done by @curquiza in #4783.
 * Fix wrong HTTP status and confusing error message on wrong payload by @Karribalu in #4716
 * Fix the missing geo distance when one or both of the lat/lng are string by @irevoire in #4731
 * Fix errors related to `OffsetDateTime`: use a fixed date format regardless of features by @dureuill in #4850
+* Fix filter that doesn't return valid documents by @dureuill in #4864 & #4858
 
 # Misc
 
