Add missing features

--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -14,11 +14,47 @@ Some SDKs might not include all new features. Consult the project repository for
 
 # New features and updates 🔥
 
-## Hybrid search improvements
+## Experimental - Hybrid search improvements
 
-TBD
+For a future stabilization, multiple changes have been applied to hybrid search features.
 
-Done by @dureuill in #4906,  #4920, #4892, and TBD
+📖 More details about the usage in this [page](https://www.notion.so/meilisearch/v1-11-AI-search-changes-0e37727193884a70999f254fa953ce6e).
+
+Done by @dureuill in #4906, #4920, #4892, and #4938.
+
+### ⚠️ Breaking changes
+
+* When using the semantic or the hybrid search, `hybrid.embedder` is now a **mandatory** parameter in `GET and POST /indexes/{:indexUid}/search`
+* As a consequence, it is now **mandatory** to pass `hybrid` even for full-vector search (with only `vector` and not `q`)
+* `embedder` is now a **mandatory** parameter in `GET and POST /indexes/{:indexUid}/similar`
+* Ignore non-zero `semanticRatio` when `vector` is passed but not `q`: a semantic search will be performed (unless `hybrid.semanticRatio` is null).
+
+### Addition & improvements
+
+* The default model for OpenAI is now `text-embedding-3-small` instead of `text-embedding-ada-002`.
+* Limit the maximum length of a rendered document template: when the source of an embedder is set to `huggingFace`, `openAi`, `rest` or `ollama`, then `documentTemplateMaxBytes` is now available as an optional parameter. This parameter describes the number of bytes in which the rendered document template text should fit when trying to embed a document. Longer texts are truncated to fit.
+* Add the ability to query whether a field is searchable in `documentTemplate`: use `field.is_searchable: true` if the field is a searchable attribute, otherwise false.
+* The new document template changed to
+  * filter out fields that are not searchable
+  * filter out fields that are nil or missing for the current document
+
+v1.10 and before:
+```
+{% for field in fields %}
+{{ field.name }}: {{ field.value }}\n
+{% endfor %}
+```
+
+From v1.11:
+```
+{% for field in fields %}
+{% if field.is_searchable and not field.value == nil %}
+{{ field.name }}: {{ field.value }}\n
+{% endif %}
+{% endfor %}
+```
+
+This last change is backward compatible. Embedders that use the v1.10 document template will keep using it. The new default document template will only be applied to newly added embedders.
 
 ## Speed up indexing of your vector database with binary quantization
 
@@ -26,11 +62,101 @@ TBD
 
 ## Federated search improvements
 
-TBD
+### Apply facets
+
+Apply facet in your federated search, by using `federation.facetsByIndex` in the POST `POST /multi-search` route.
+
+```json5
+POST /multi-search
+{
+  "federation": {
+    "limit": 20,
+    "offset": 0,
+	  "facetsByIndex": {
+	    "movies": ["title", "id"],
+	    "comics": ["title"],
+	  }
+  },
+  "queries": [
+    {
+      "q": "Batman",
+      "indexUid": "movies"
+    },
+    {
+      "q": "Batman",
+      "indexUid": "comics"
+    }
+  ]
+}
+```
+
+### Apply facet settings
+
+Apply facet settings in your federated search, by using `federation.mergeFacets` in the POST `POST /multi-search` route.
+
+```json5
+POST /multi-search
+{
+
+  "federation": {
+    "limit": 20,
+    "offset": 0,
+	  "facetsByIndex": {
+	    "movies": ["title", "id"],
+	    "comics": ["title"],
+	  },
+	  "mergeFacets": {
+	    "maxValuesPerFacet": 10,
+	  }
+  }
+  "queries": [
+    {
+      "q": "Batman",
+      "indexUid": "movies"
+    },
+    {
+      "q": "Batman",
+      "indexUid": "comics"
+    }
+  ]
+}
+```
+
+Done by @dureuill in #4929.
+
+## Experimental - `START_WITH` operator during search
+
+Enable the experimental feature to use the `START_WITH` filter operator:
+
+```bash
+curl \
+  -X PATCH 'http://localhost:7700/experimental-features/' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{
+    "containsFilter": true
+  }'
+```
+
+Use the `START_WITH` operator when filtering:
+
+```json5
+curl \
+  -X POST http://localhost:7700/indexes/movies/search \
+  -H 'Content-Type: application/json' \
+  --data-binary '{
+    "filter": "hero START_WITH spider"
+  }'
+```
+
+🗣️ This is an experimental feature, and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/763).
+
+Done by @Kerollmops in #4939.
 
 ## Other improvements
 
-* TBD
+* Language support and [localizedAttributes settings](https://www.meilisearch.com/docs/reference/api/settings#localized-attributes) by @ManyTheFish in #4937
+  * Add iso-639-1 variants
+  * Convert iso-639-1 into iso-639-3
 
 # Fixes 🐞
 
@@ -43,11 +169,9 @@ TBD
   * Security dependency upgrade: bump quinn-proto from 0.11.3 to 0.11.8 by @dependabot in #4911
 * CIs and tests
   * Make the tests run faster by @irevoire in #4808
-* Documentation
-  * TBD
 * Misc
   * Allow Meilitool to dumplessly, offline upgrade v1.9 -> v1.10 in some conditions by @dureuill in #4912
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): TBD
+- [Meilisearch](https://github.com/meilisearch/meilisearchg): TBD
 - [Charabia](https://github.com/meilisearch/charabia): TBD
