--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -27,7 +27,7 @@ Done by @dureuill in #4906, #4920, #4892, and #4938.
 * When using the semantic or the hybrid search, `hybrid.embedder` is now a **mandatory** parameter in `GET and POST /indexes/{:indexUid}/search`
 * As a consequence, it is now **mandatory** to pass `hybrid` even for full-vector search (with only `vector` and not `q`)
 * `embedder` is now a **mandatory** parameter in `GET and POST /indexes/{:indexUid}/similar`
-* Ignore non-zero `semanticRatio` when `vector` is passed but not `q`: a semantic search will be performed (unless `hybrid.semanticRatio` is null).
+* Ignore non-zero `semanticRatio` when `vector` is passed but not `q`: a semantic search will be performed.
 
 ### Addition & improvements
 
