--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -33,7 +33,7 @@ Done by @dureuill in #4906, #4920, #4892, and #4938.
 
 * The default model for OpenAI is now `text-embedding-3-small` instead of `text-embedding-ada-002`.
 * Limit the maximum length of a rendered document template: when the source of an embedder is set to `huggingFace`, `openAi`, `rest` or `ollama`, then `documentTemplateMaxBytes` is now available as an optional parameter. This parameter describes the number of bytes in which the rendered document template text should fit when trying to embed a document. Longer texts are truncated to fit.
-* Add the ability to query whether a field is searchable in `documentTemplate`: use `field.is_searchable: true` if the field is a searchable attribute, otherwise false.
+* Add the ability to query whether a field is searchable in `documentTemplate`: use `field.is_searchable`:  `true` if the field is a searchable attribute, otherwise `false`.
 * The new document template changed to
   * filter out fields that are not searchable
   * filter out fields that are nil or missing for the current document
