--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -62,7 +62,7 @@ TBD
 
 ## Federated search improvements
 
-### Apply facets
+### Request by-index facet distribution and stats
 
 Apply facet in your federated search, by using `federation.facetsByIndex` in the POST `POST /multi-search` route.
 
