Apply suggestions from code review
Co-authored-by: Louis Dureuil <louis@meilisearch.com>

--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -64,7 +64,9 @@ TBD
 
 ### Request by-index facet distribution and stats
 
-Apply facet in your federated search, by using `federation.facetsByIndex` in the POST `POST /multi-search` route.
+Request facet distributions and facet stats in your federated search, by using `federation.facetsByIndex` in the POST `POST /multi-search` route.
+
+By default the distribution and stats are returned for each index that participates in the federated search.
 
 ```json5
 POST /multi-search
@@ -92,7 +94,9 @@ POST /multi-search
 
 ### Apply facet settings
 
-Apply facet settings in your federated search, by using `federation.mergeFacets` in the POST `POST /multi-search` route.
+Merge the returned facets in a single facet distribution and stats that is global to the entire request, by using `federation.mergeFacets` in the POST `POST /multi-search` route.
+
+The number of returned values can be limited for all facets with `federation.mergeFacets.maxValuesPerFacet`.
 
 ```json5
 POST /multi-search
@@ -162,6 +166,7 @@ Done by @Kerollmops in #4939.
 
 * ⚠️ When using federated search, `query.facets` was silently ignored at the query level, but should not have been. It now returns the appropriate error. Use `federation.facetsByIndex` instead if you want facets to be applied during federated search.
 * In prometheus metrics return the route pattern instead of the real route when returning the HTTP requests total by @irevoire in #4839
+* Always truncate values at the end of the list of facet values when the number of facet values is larger than the index setting `faceting.maxValuesPerFacet`. For example, for the facet values ordered alphabetically `["blue", "red", "yellow"]`, setting `faceting.maxValuesPerFacet` sometimes resulted in `["blue", "yellow"]` instead of ["blue", "red"]`. By @dureuil in #4929
 
 # Misc
 
