--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -92,7 +92,7 @@ POST /multi-search
 }
 ```
 
-### Apply facet settings
+### Request merged facet distribution and stats
 
 Merge the returned facets in a single facet distribution and stats that is global to the entire request, by using `federation.mergeFacets` in the POST `POST /multi-search` route.
 
