Fix typo starts_with

--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -128,9 +128,9 @@ POST /multi-search
 
 Done by @dureuill in #4929.
 
-## Experimental - `START_WITH` operator during search
+## Experimental - `STARTS_WITH` operator during search
 
-Enable the experimental feature to use the `START_WITH` filter operator:
+Enable the experimental feature to use the `STARTS_WITH` filter operator:
 
 ```bash
 curl \
@@ -141,14 +141,14 @@ curl \
   }'
 ```
 
-Use the `START_WITH` operator when filtering:
+Use the `STARTS_WITH` operator when filtering:
 
 ```json5
 curl \
   -X POST http://localhost:7700/indexes/movies/search \
   -H 'Content-Type: application/json' \
   --data-binary '{
-    "filter": "hero START_WITH spider"
+    "filter": "hero STARTS_WITH spider"
   }'
 ```
 
