--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -58,7 +58,29 @@ This last change is backward compatible. Embedders that use the v1.10 document t
 
 ## Speed up indexing of your vector database with binary quantization
 
-TBD
+The binary quantization converts your embeddings of floating point numbers (using 32 bits) into embeddings of boolean values (using 1 bit).
+In our benchmarks, it reduced the size of the database by a factor of 10, and divided the indexing time by a factor of 6 without much impact on the search time.
+
+> [!WARNING]  
+> Enabling this feature will update all of your vectors to contain only `1`s or `-1`s, impacting the relevancy significantly.
+> Once enabled, **there is no coming back**. Before trying it out on your main index, you should try the feature on a smaller index to ensure it fits your use case.
+
+Although this feature degrades the relevancy of the semantic searches, it showed great results on collections with many dimensions (> 1300) and many points (more than 100000).
+
+Enable the binary quantization by updating the settings of your embedder with:
+```bash
+curl \
+  -X PATCH 'http://localhost:7700/indexes/movies/settings' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{
+    "embedders": {
+      "image2text": {
+        "binaryQuantized": true 
+      }
+    }
+  }'
+  ```
+
 
 ## Federated search improvements
 
