--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -61,7 +61,7 @@ This last change is backward compatible. Embedders that use the v1.10 document t
 The binary quantization converts your embeddings of floating point numbers (using 32 bits) into embeddings of boolean values (using 1 bit).
 In our benchmarks, it reduced the size of the database by a factor of 10, and divided the indexing time by a factor of 6 without much impact on the search time.
 
-> [!WARNING]  
+> [!WARNING]
 > Enabling this feature will update all of your vectors to contain only `1`s or `-1`s, impacting the relevancy significantly.
 > Once enabled, **there is no coming back**. Before trying it out on your main index, you should try the feature on a smaller index to ensure it fits your use case.
 
@@ -75,12 +75,13 @@ curl \
   --data-binary '{
     "embedders": {
       "image2text": {
-        "binaryQuantized": true 
+        "binaryQuantized": true
       }
     }
   }'
-  ```
+```
 
+Done by @irevoire in #4941.
 
 ## Federated search improvements
 
@@ -189,6 +190,7 @@ Done by @Kerollmops in #4939.
 * ⚠️ When using federated search, `query.facets` was silently ignored at the query level, but should not have been. It now returns the appropriate error. Use `federation.facetsByIndex` instead if you want facets to be applied during federated search.
 * In prometheus metrics return the route pattern instead of the real route when returning the HTTP requests total by @irevoire in #4839
 * Always truncate values at the end of the list of facet values when the number of facet values is larger than the index setting `faceting.maxValuesPerFacet`. For example, for the facet values ordered alphabetically `["blue", "red", "yellow"]`, setting `faceting.maxValuesPerFacet` sometimes resulted in `["blue", "yellow"]` instead of ["blue", "red"]`. By @dureuil in #4929
+* Fix Swedish support: the characters `å`/`ä`/`ö` are not normalized like the `a`/`o` characters anymore. By @ManyTheFish in #4945
 
 # Misc
 
@@ -196,9 +198,11 @@ Done by @Kerollmops in #4939.
   * Security dependency upgrade: bump quinn-proto from 0.11.3 to 0.11.8 by @dependabot in #4911
 * CIs and tests
   * Make the tests run faster by @irevoire in #4808
+* Documentation
+  * Fix broken links in README by @iornstein in #4943
 * Misc
   * Allow Meilitool to dumplessly, offline upgrade v1.9 -> v1.10 in some conditions by @dureuill in #4912
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearchg): TBD
+- [Meilisearch](https://github.com/meilisearch/meilisearchg): @iornstein.
 - [Charabia](https://github.com/meilisearch/charabia): TBD
