--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -189,7 +189,7 @@ Done by @Kerollmops in #4939.
 
 * ⚠️ When using federated search, `query.facets` was silently ignored at the query level, but should not have been. It now returns the appropriate error. Use `federation.facetsByIndex` instead if you want facets to be applied during federated search.
 * In prometheus metrics return the route pattern instead of the real route when returning the HTTP requests total by @irevoire in #4839
-* Always truncate values at the end of the list of facet values when the number of facet values is larger than the index setting `faceting.maxValuesPerFacet`. For example, for the facet values ordered alphabetically `["blue", "red", "yellow"]`, setting `faceting.maxValuesPerFacet` sometimes resulted in `["blue", "yellow"]` instead of ["blue", "red"]`. By @dureuil in #4929
+* Always truncate values at the end of the list of facet values when the number of facet values is larger than the index setting `faceting.maxValuesPerFacet`. For example, for the facet values ordered alphabetically `["blue", "red", "yellow"]`, setting `faceting.maxValuesPerFacet` sometimes resulted in `["blue", "yellow"]` instead of ["blue", "red"]`. By @dureuill in #4929
 * Fix Swedish support: the characters `å`/`ä`/`ö` are not normalized like the `a`/`o` characters anymore. By @ManyTheFish in #4945
 
 # Misc
