Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -4,7 +4,7 @@
 > [!WARNING]
 > Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.11 introduces several changes about hybrid search: usage improvements to prepare a future stabilization of the feature, but also a huge impact on the performance thanks to the binary quantization. Finally, according to your feedback, we improved the federated search usage.
+Meilisearch v1.11 introduces AI-powered search performance improvements thanks to binary quantization and various usage changes, all of which are steps towards a future stabilization of the feature. We have also improved federated search usage following user feedback.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after sa new version becomes available.
@@ -14,60 +14,47 @@ Some SDKs might not include all new features. Consult the project repository for
 
 # New features and updates 🔥
 
-## Experimental - Hybrid search improvements
+## Experimental - AI-powered search improvements
 
-For a future stabilization, multiple changes have been applied to hybrid search features.
-
-📖 More details about the usage in this [page](https://www.notion.so/meilisearch/v1-11-AI-search-changes-0e37727193884a70999f254fa953ce6e).
+This release is Meilisearch's first step towards the stabilization of AI-powered search and introduces a few breaking changes to its API. [Consult the PRD for full usage details.](https://www.notion.so/meilisearch/v1-11-AI-search-changes-0e37727193884a70999f254fa953ce6e)
 
 Done by @dureuill in #4906, #4920, #4892, and #4938.
 
 ### ⚠️ Breaking changes
 
-* When using the semantic or the hybrid search, `hybrid.embedder` is now a **mandatory** parameter in `GET and POST /indexes/{:indexUid}/search`
-* As a consequence, it is now **mandatory** to pass `hybrid` even for full-vector search (with only `vector` and not `q`)
-* `embedder` is now a **mandatory** parameter in `GET and POST /indexes/{:indexUid}/similar`
-* Ignore non-zero `semanticRatio` when `vector` is passed but not `q`: a semantic search will be performed.
+* When performing AI-powered searches, `hybrid.embedder` is now a **mandatory** parameter in `GET` and `POST` `/indexes/{:indexUid}/search`
+* As a consequence, it is now **mandatory** to pass `hybrid` even for pure semantic searches
+* `embedder` is now a **mandatory** parameter in `GET` and `POST` `/indexes/{:indexUid}/similar`
+* Meilisearch now ignores `semanticRatio` and performs a pure semantic search for queries that include `vector` but not `q`
 
 ### Addition & improvements
 
-* The default model for OpenAI is now `text-embedding-3-small` instead of `text-embedding-ada-002`.
-* Limit the maximum length of a rendered document template: when the source of an embedder is set to `huggingFace`, `openAi`, `rest` or `ollama`, then `documentTemplateMaxBytes` is now available as an optional parameter. This parameter describes the number of bytes in which the rendered document template text should fit when trying to embed a document. Longer texts are truncated to fit.
-* Add the ability to query whether a field is searchable in `documentTemplate`: use `field.is_searchable`:  `true` if the field is a searchable attribute, otherwise `false`.
-* The new document template changed to
-  * filter out fields that are not searchable
-  * filter out fields that are nil or missing for the current document
+* The default model for OpenAI is now `text-embedding-3-small` instead of `text-embedding-ada-002`
+* This release introduces a new embedder option: `documentTemplateMaxBytes`. Meilisearch will truncate a document's template text when it goes over the specified limit
+* Fields in `documentTemplate` include a new `field.is_searchable` property. It is also possible to filter out document fields:
 
-v1.10 and before:
+v1.11:
 ```
 {% for field in fields %}
-{{ field.name }}: {{ field.value }}\n
+  {% if field.is_searchable and not field.value == nil %}
+    {{ field.name }}: {{ field.value }}\n
+  {% endif %}
 {% endfor %}
 ```
 
-From v1.11:
+v1.10:
 ```
 {% for field in fields %}
-{% if field.is_searchable and not field.value == nil %}
-{{ field.name }}: {{ field.value }}\n
-{% endif %}
+  {{ field.name }}: {{ field.value }}\n
 {% endfor %}
 ```
 
-This last change is backward compatible. Embedders that use the v1.10 document template will keep using it. The new default document template will only be applied to newly added embedders.
+Changes to document templates are backwards compatible. Embedders using the v1.10 document template will continue working as before The new default document template will only work newly created embedders.
 
-## Speed up indexing of your vector database with binary quantization
+## Vector database indexing performance improvements
 
-The binary quantization converts your embeddings of floating point numbers (using 32 bits) into embeddings of boolean values (using 1 bit).
-In our benchmarks, it reduced the size of the database by a factor of 10, and divided the indexing time by a factor of 6 without much impact on the search time.
+v1.11 introduces a new embedder option, `binaryQuantized`:
 
-> [!WARNING]
-> Enabling this feature will update all of your vectors to contain only `1`s or `-1`s, impacting the relevancy significantly.
-> Once enabled, **there is no coming back**. Before trying it out on your main index, you should try the feature on a smaller index to ensure it fits your use case.
-
-Although this feature degrades the relevancy of the semantic searches, it showed great results on collections with many dimensions (> 1300) and many points (more than 100000).
-
-Enable the binary quantization by updating the settings of your embedder with:
 ```bash
 curl \
   -X PATCH 'http://localhost:7700/indexes/movies/settings' \
@@ -80,6 +67,15 @@ curl \
     }
   }'
 ```
+
+Enable binary quantization to convert embeddings of floating point numbers into embeddings of boolean values. This will negatively impact the relevancy of AI-powered searches, but significantly improve performance in large collections with more than 100 dimensions.
+
+In our benchmarks, this reduced the size of the database by a factor of 10, and divided the indexing time by a factor of 6 with little impact on search times.
+
+> [!WARNING]
+> Enabling this feature will update all of your vectors to contain only `1`s or `-1`s, impacting the relevancy significantly.
+> 
+> **You cannot revert this option once you enable it**. Before setting `binaryQuantized` to `true`, Meilisearch recommends testing it in a smaller or duplicate index in a development environment.
 
 Done by @irevoire in #4941.
 
