Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -111,11 +111,9 @@ POST /multi-search
 }
 ```
 
-### Request merged facet distribution and stats
+#### Merged facet information
 
-Merge the returned facets in a single facet distribution and stats that is global to the entire request, by using `federation.mergeFacets` in the POST `POST /multi-search` route.
-
-The number of returned values can be limited for all facets with `federation.mergeFacets.maxValuesPerFacet`.
+To obtain facet distribution and stats for all index merged into a single ,use both `facetsByIndex` and `mergeFacets` when querying the `POST` `/multi-search` endpoint:
 
 ```json5
 POST /multi-search
@@ -142,6 +140,30 @@ POST /multi-search
       "indexUid": "comics"
     }
   ]
+}
+```
+
+The response includes two new fields, `facetDistribution` and `facetStarts`:
+
+```json5
+{
+  "hits": […],
+  …
+  "facetDistribution": {
+    "title": {
+      "Batman returns": 1
+      "Batman: the killing joke": 
+    },
+    "id": {
+      "42": 1
+    }
+  },
+  "facetStats": {
+    "id": {
+      "min": 42,
+      "max": 42
+    }
+  }
 }
 ```
 
@@ -178,15 +200,15 @@ Done by @Kerollmops in #4939.
 ## Other improvements
 
 * Language support and [localizedAttributes settings](https://www.meilisearch.com/docs/reference/api/settings#localized-attributes) by @ManyTheFish in #4937
-  * Add iso-639-1 variants
-  * Convert iso-639-1 into iso-639-3
+  * Add ISO-639-1 variants
+  * Convert ISO-639-1 into ISO-639-3
 
 # Fixes 🐞
 
 * ⚠️ When using federated search, `query.facets` was silently ignored at the query level, but should not have been. It now returns the appropriate error. Use `federation.facetsByIndex` instead if you want facets to be applied during federated search.
-* In prometheus metrics return the route pattern instead of the real route when returning the HTTP requests total by @irevoire in #4839
-* Always truncate values at the end of the list of facet values when the number of facet values is larger than the index setting `faceting.maxValuesPerFacet`. For example, for the facet values ordered alphabetically `["blue", "red", "yellow"]`, setting `faceting.maxValuesPerFacet` sometimes resulted in `["blue", "yellow"]` instead of ["blue", "red"]`. By @dureuill in #4929
-* Fix Swedish support: the characters `å`/`ä`/`ö` are not normalized like the `a`/`o` characters anymore. By @ManyTheFish in #4945
+* Prometheus `/metrics` return the route pattern instead of the real route when returning the HTTP requests total by @irevoire in #4839
+* Truncate values at the end of a list of facet values when the number of facet values is larger than `maxValuesPerFacet`. For example, setting `maxValuesPerFacet` to `2` could result in `["blue", "red", "yellow"]`, being truncated to `["blue", "yellow"]` instead of ["blue", "red"]`. By @dureuill in #4929
+* Swedish support: the characters `å`, `ä`, `ö` are no longer normalized to `a` and `o`. By @ManyTheFish in #4945
 
 # Misc
 
@@ -197,7 +219,7 @@ Done by @Kerollmops in #4939.
 * Documentation
   * Fix broken links in README by @iornstein in #4943
 * Misc
-  * Allow Meilitool to dumplessly, offline upgrade v1.9 -> v1.10 in some conditions by @dureuill in #4912
+  * Allow Meilitool to upgrade from v1.9 to v1.10 without a dump in some conditions, by @dureuill in #4912
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearchg): @iornstein.
