--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -81,11 +81,13 @@ Done by @irevoire in #4941.
 
 ## Federated search improvements
 
-### Request by-index facet distribution and stats
+### Facet distribution and stats for federated searches
 
-Request facet distributions and facet stats in your federated search, by using `federation.facetsByIndex` in the POST `POST /multi-search` route.
+This release adds two new federated search options, `facetsByIndex` and `mergeFacets`. These allow you to request facet distributions and stats data for a federated search.
 
-By default the distribution and stats are returned for each index that participates in the federated search.
+#### Facet information by index
+
+To obtain facet distribution and stats for each separate index, use `facetsByIndex` when querying the `POST` `/multi-search` endpoint:
 
 ```json5
 POST /multi-search
@@ -108,6 +110,34 @@ POST /multi-search
       "indexUid": "comics"
     }
   ]
+}
+```
+
+The multi-search response will include a new field, `facetsByIndex` with facet data separated per index: 
+
+```json5
+{
+  "hits": […],
+  …
+  "facetsByIndex": {
+      "movies": {
+        "distribution": {
+          "title": {
+            "Batman returns": 1
+          },
+          "id": {
+            "42": 1
+          }
+        },
+        "stats": {
+          "id": {
+            "min": 42,
+            "max": 42
+          }
+        }
+      },
+     …
+  }  
 }
 ```
 
