Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -199,7 +199,7 @@ The response includes two new fields, `facetDistribution` and `facetStarts`:
 
 Done by @dureuill in #4929.
 
-## Experimental - `STARTS_WITH` operator during search
+## Experimental — New `STARTS_WITH` filter operator
 
 Enable the experimental feature to use the `STARTS_WITH` filter operator:
 
